--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -9,6 +9,9 @@ name: Deploy to Firebase Hosting on merge
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    env:
+      NODE_ENV: production
+      PUBLIC_URL: https://lumea-verde.web.app
     steps:
       - uses: actions/checkout@v3
       - run: npm ci && npm run build
