--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,8 @@
     {
       "src": "logo.svg",
       "sizes": "64x64 32x32 24x24 16x16 192x192 512x512",
-      "type": "image/svg"
+      "type": "image/svg",
+      "purpose": "any"
     }
   ],
   "start_url": ".",
