--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "icons": [
     {
       "src": "logo.svg",
-      "sizes": "64x64 32x32 24x24 16x16 192x192 512x512",
-      "type": "image/svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
       "purpose": "any"
     }
   ],
