--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
       "src": "logo.svg",
       "sizes": "any",
       "type": "image/svg+xml",
-      "purpose": "any"
+      "purpose": "maskable any"
     }
   ],
   "start_url": ".",
