--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
+    "dexie":"^3.2.3",
     "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
